# laptop_setup

./: .ansible-lint  .cursorrules  .envrc  .gitignore  .markdownlint.json  .mega-linter.yml  .mise.toml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .yamllint  AUTOMATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  SECURITY.md  Taskfile.yml  ansible.cfg  hosts  main.yml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  TELEGRAM_SETUP.md  auto-assign.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  role_request.md
.github/actions/docker_image_cache/: action.yml
.github/workflows/: ci.yml  mega-linter.yml  pr-automation.yml  pr.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
files/: cursor-ansible.mdc  cursor-bash.mdc  cursor-terraform.mdc
group_vars/: all.yml  mymac.yml
roles/appstore/defaults/: main.yml
roles/appstore/tasks/: main.yml
roles/appstore/vars/: main.yml
roles/base-tools/defaults/: main.yml
roles/base-tools/meta/: main.yml
roles/base-tools/tasks/: install-Darwin.yml  (+8 more)
roles/docker/: README.md
roles/gpg/: README.md
roles/mise/: README.md
roles/uv/: README.md
roles/warp/: README.md
scripts/: dev-setup.sh
specs/001-claude-code-role/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-debian-compatibility/: plan.md  quickstart.md  research.md  role-inventory.md  spec.md  tasks.md
(+190 files in other folders)
