[project]
name = "laptop-setup"
version = "0.1.0"
description = "Ansible playbook to bootstrap laptop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.1.0",
    "ansible-core>=2.20.1",
    "detect-secrets>=1.5.0",
    "ansible-lint>=25.12.1",
    "molecule>=25.12.0",
    "molecule-plugins[docker]>=25.8.12",
]
